Fixed overflow in mobile view

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -32,9 +32,9 @@ nav {
 
 .spacer{
   aspect-ratio: 900/300;
-  margin-left: -2%;
-  margin-right: 3%;
+  
   width: 110%;
+  max-width: 100vw;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
