--- a/scss/main.css
+++ b/scss/main.css
@@ -20,9 +20,8 @@ nav {
 
 .spacer {
   aspect-ratio: 900/300;
-  margin-left: -2%;
-  margin-right: 3%;
   width: 110%;
+  max-width: 100vw;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
